syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package =".;proto";

//定义服务
service Order{
  //购物车信息
  rpc CartItemList(UserInfo) returns (CartItemListResponse);
  //添加购物车
  rpc CreateCartItem(CartItemRequest)returns(ShopCartInfoResponse);
  //更新购物车
  rpc UpdateCartItem(CartItemRequest)returns(google.protobuf.Empty);
  //删除购物车
  rpc DeleteCartItem(CartItemRequest)returns(google.protobuf.Empty);

  //订单
  rpc CreateOrder(OrderRequest) returns (OrderInfoResponse);
  //订单列表
  rpc OrderList(OrderFilterRequest) returns (OrderListResponse);
  //订单详情，需要知道商品的信息
  rpc OrderDetail(OrderRequest) returns (OrderInfoDetailResponse);
  //更新订单状态
  rpc UpdateOrderStatus(OrderStatus) returns (google.protobuf.Empty);
}

message UserInfo{
    int32 id=1;
}
//商品信息
message ShopCartInfoResponse{
  int32 id=1;
  int32 userId=2;
  int32 goodsId=3;
  int32 nums = 4;
  bool checked =5;
}

message CartItemListResponse{
  int32 total =1;
  repeated ShopCartInfoResponse data=2;
}
//添加购物车请求信息
message CartItemRequest{
  int32 id=1;
  int32 userId=2;
  int32 goodsId=3;
  //只是占位没有实现
  string goodsName=4;
  string goodsImg=5;
  int32 goodsPrice=6;
  //需要实现
  int32 nums = 7;
  bool checked =8;
}

//订单创建请求
message OrderRequest{
  int32 id = 1;//订单id，自动生成的
  int32 userId = 2;
  string address  =3;
  string name =4;
  string mobile =5;
  string post=6;
}

//订单响应
message OrderInfoResponse{
  int32 id = 1;//订单id，自动生成的
  int32 userId = 2;
  string orderSn = 3;//订单编号，生成的
  string payType = 4;//支付方式
  string status = 5;//订单状态
  string post = 6;//邮编
  float total=7;
  string address  =8;
  string name =9;
  string mobile =10;
  string addTime =11;
}
//订单列表响应
message OrderFilterRequest{
  int32 userId =1;
  int32 pages =2;
  int32 pagePerNums =3;
}

//订单列表响应
message OrderListResponse{
  int32 total =1;
  repeated OrderInfoResponse data=2;
}
//订单详情响应
message OrderItemResponse{
  int32 id = 1;
  int32 orderId = 2;
  int32 goodsId = 3;
  string goodsName = 4;
  string goodsImg = 5;
  float goodsPrice = 6;
  int32 nums = 7;
}
message OrderInfoDetailResponse{
  OrderInfoResponse orderInfo =1;
  repeated OrderItemResponse goods=2;//商品列表
}

//修改订单状态请求
message OrderStatus{
  int32 id = 1;
  string orderSn = 2;
  string status = 3;
}
